welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:14: error: ';' expected but 'else' found.
	} else {
          ^blueTicket:19: error: Unmatched closing brace '}' ignored here
 }
 ^